--- a/fancard.html
+++ b/fancard.html
@@ -81,7 +81,7 @@
 </head>
 <body>
   <div class="card-container">
-    <div class="card"><img src="https://via.placeholder.com/200x150"><p>Moment 1</p></div>
+    <div class="card"><img src="images/bamby.jpg><p>I do love all of your silly pics mwehehehe</p></div>
     <div class="card"><img src="https://via.placeholder.com/200x150"><p>Moment 2</p></div>
     <div class="card"><img src="https://via.placeholder.com/200x150"><p>Moment 3</p></div>
     <div class="card"><img src="https://via.placeholder.com/200x150"><p>Moment 4</p></div>
@@ -89,7 +89,7 @@
   </div>
 
   <div class="nav">
-    <button onclick="window.location.href='gift.html'">Back</button>
+    <button onclick="window.location.href='index.html'">Back</button>
     <button onclick="window.location.href='flower.html'">Next</button>
   </div>
 
