--- a/fancard.html
+++ b/fancard.html
@@ -81,11 +81,11 @@
 </head>
 <body>
   <div class="card-container">
-    <div class="card"><img src="images/bamby.jpg><p>I do love all of your silly pics mwehehehe</p></div>
-    <div class="card"><img src="https://via.placeholder.com/200x150"><p>Moment 2</p></div>
-    <div class="card"><img src="https://via.placeholder.com/200x150"><p>Moment 3</p></div>
-    <div class="card"><img src="https://via.placeholder.com/200x150"><p>Moment 4</p></div>
-    <div class="card"><img src="https://via.placeholder.com/200x150"><p>Moment 5</p></div>
+    <div class="card"><img src="images/silly.jpg"><p>I do love all of your silly pics mwehehehe</p></div>
+    <div class="card"><img src="images/eyelashes.jpg"><p>Pak! what beatiful eyelashes. 10/10</p></div>
+    <div class="card"><img src="images/disgust.jpg"><p>reaction nimo everytime na naa koy iingon na weird stuffs</p></div>
+    <div class="card"><img src="images/1169b876-d038-41fd-b562-b9e1cead2aea.jpg"><p>kini, sleeping beauty </p></div>
+    <div class="card"><img src="images/couplepic.jpg"><p>Couple pic nato duha mwhehehehe</p></div>
   </div>
 
   <div class="nav">
