--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- page1.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,26 +11,36 @@
       background: linear-gradient(to bottom, #ffd1dc, #fff0f5);
       text-align: center;
       color: #d63384;
+      overflow-x: hidden; /* prevent horizontal scroll */
+      min-height: 100vh;
     }
 
     h1 {
       margin-top: 2em;
       font-size: 2.5em;
+      position: relative;
+      z-index: 1;
     }
 
     p {
       font-size: 1.2em;
       margin: 1em;
+      position: relative;
+      z-index: 1;
     }
 
     img {
       border-radius: 12px;
       max-width: 90%;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      position: relative;
+      z-index: 1;
     }
 
     .btn-group {
       margin-top: 2em;
+      position: relative;
+      z-index: 1;
     }
 
     button {
@@ -49,17 +58,85 @@
     button:hover {
       background: #ff85c1;
     }
+
+    .tulip {
+      position: fixed;
+      bottom: -60px;
+      animation: float 12s linear infinite;
+      z-index: 0;
+    }
+
+    .tulip-head {
+      width: 20px;
+      height: 25px;
+      border-radius: 50% 50% 0 0;
+      background: pink;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .stem {
+      width: 2px;
+      height: 40px;
+      background: green;
+      position: absolute;
+      top: 25px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .leaf {
+      width: 10px;
+      height: 10px;
+      background: green;
+      position: absolute;
+      top: 35px;
+      border-radius: 50%;
+    }
+
+    .leaf.left {
+      left: 40%;
+      transform: rotate(-30deg);
+    }
+
+    .leaf.right {
+      right: 40%;
+      transform: rotate(30deg);
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-120vh);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>Happy Girlfriend Day, My Love ❤️</h1>
+  <h1>Happy Girlfriend Day, Bamby ko</h1>
   <p>You make my heart go beep boop every single day 🤖💕</p>
 
-  <img src="https://via.placeholder.com/300x200" alt="Couple Photo" />
+  <img src="images/dp.jpg" />
 
   <div class="btn-group">
     <button onclick="window.location.href='fancard.html'">Next</button>
-    <button disabled>Back</button>
   </div>
+
+  <!-- 🌷 Floating Tulips -->
+  <div class="tulip" style="left: 10%; animation-delay: 0s;"><div class="tulip-head" style="background: pink;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
+  <div class="tulip" style="left: 20%; animation-delay: 2s;"><div class="tulip-head" style="background: red;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
+  <div class="tulip" style="left: 30%; animation-delay: 4s;"><div class="tulip-head" style="background: orange;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
+  <div class="tulip" style="left: 40%; animation-delay: 1s;"><div class="tulip-head" style="background: violet;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
+  <div class="tulip" style="left: 50%; animation-delay: 3s;"><div class="tulip-head" style="background: yellow;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
+  <div class="tulip" style="left: 60%; animation-delay: 5s;"><div class="tulip-head" style="background: hotpink;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
+  <div class="tulip" style="left: 70%; animation-delay: 1.5s;"><div class="tulip-head" style="background: purple;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
+  <div class="tulip" style="left: 80%; animation-delay: 3.5s;"><div class="tulip-head" style="background: deeppink;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
+  <div class="tulip" style="left: 90%; animation-delay: 6s;"><div class="tulip-head" style="background: coral;"></div><div class="stem"></div><div class="leaf left"></div><div class="leaf right"></div></div>
 </body>
 </html>
