--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: "Comic Sans MS", cursive;
+      font-family: "Comic Sans MS", ;
       background: linear-gradient(to bottom, #ffd1dc, #fff0f5);
       text-align: center;
       color: #d63384;
