--- a/flower.html
+++ b/flower.html
@@ -118,7 +118,7 @@
     <h2>To my favorite person 💗</h2>
     <p>
       Hello Palangging ko!<br><br>
-      Still you're my favorite hooman and I never get tired of you — you always get stuck in my head.<br><br>
+      Still you're my favorite hooman and I never get tired of you, you always get stuck in my head.<br><br>
       Even on days when I’m tired, busy, or just being a sleepy potato, thinking about you makes everything feel lighter 💗<br><br>
       Sometimes I wonder how I got so lucky like, did I save a kingdom in my past life or something? 😌<br><br>
       Because wow, I have YOU. The sweetest, silliest, cutest, moodiest hehe, and prettiest human in existence.<br><br>
